# WEB_HW_9

./: README.md  cli_search.py  main.py  main_test.py  parse.py  pyproject.toml  scraping.py
hw_9/hw_9/: items.py
hw_9/hw_9/spiders/: author_crawler.py
src/DB/: connect.py  connect_by_pymongo.py  models.py  search_in_db.py  seed_to_db.py
src/data/: authors.json
src/tasks/: consumer.py  consumer_email.py  consumer_sms.py  producer.py  producer_email.py  producer_sms.py
